--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,16 +18,47 @@
         <div class="col-md-5 col-xs-5" id="left-column">
 
             <!-- tabs here -->
-            <ul class="nav nav-tabs border-right">
+            <ul class="nav nav-tabs border-right bold" id="nav">
                 <li class="active"><a data-toggle="tab" href="#tab0">r/all</a></li>
                 <li><a data-toggle="tab" href="#tab1">blahblahblah</a></li>
             </ul>
 
-
-            <div class="well border-right" id="left-column-0">
+            <div class="well border-right left-well" id="left-column-0">
 
                 <div class="tab-content">
                     <div id="tab0" class="tab-pane fade in active">
+
+
+                        <!-- display reddit posts here -->
+
+                        <!-- post 1 -->
+                        <!--<div class="row border-bottom" id="rAll-posts0">
+                            <div class="col-md-2 col-xs-2 center-upvotes upvote-styling">
+                                <p>upboats here</p>
+                            </div>
+
+                            <div class="col-md-10 col-xs-10">
+                                <p class="reddit-title">title ... skrrr skrrr</p>
+
+                                <div class="row extra-post-info">
+                                    <div class="col-md-3 col-xs-4">
+                                        <p>author / username</p>
+                                    </div>
+
+                                    <div class="col-md-3 col-xs-4">
+                                        <p>subreddit</p>
+                                    </div>
+
+                                    <div class="col-md-3 col-xs-4">
+                                        <p>###### comments</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>-->
+
+
+
+
 
 
 
