--- a/public/stylesheets/myCustom.css
+++ b/public/stylesheets/myCustom.css
@@ -134,8 +134,10 @@ html, body {
     margin-bottom: 0;
     list-style: none;
     height: 24px;
-
     background-color: #bababa;
+
+    opacity: 0;
+    margin-top: -24px;
 }
 
 .nav > li {
