--- a/public/stylesheets/myCustom.css
+++ b/public/stylesheets/myCustom.css
@@ -228,7 +228,7 @@ p, a, h3, h4{
     margin-bottom: 0;
     margin-top: 5px;
     color: #cc782f;
-
+    padding-right: 35px;
 }
 
 .extra-post-info{
