multiple hard coded tabs (initial commit)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,16 +19,18 @@
 
             <!-- tabs here -->
             <ul class="nav nav-tabs border-right bold" id="nav">
-                <li class="active"><a data-toggle="tab" href="#tab0">r/all</a></li>
-                <li><a data-toggle="tab" href="#tab1">blahblahblah</a></li>
+                <li class="active"><a data-toggle="tab" href="#tab0" id="r/all">r/all</a></li>
+                <li><a data-toggle="tab" href="#tab1" id="r/pics">r/pics</a></li>
+                <li><a data-toggle="tab" href="#tab2" id="r/programmerHumor">r/programmerHumor</a></li>
+                <li><a data-toggle="tab" href="#tab3" id="r/fitness">r/fitness</a></li>
+                <li><a data-toggle="tab" href="#tab4" id="r/2007scape">r/2007scape</a></li>
+
             </ul>
 
             <div class="well border-right left-well" id="left-column-0">
 
                 <div class="tab-content">
                     <div id="tab0" class="tab-pane fade in active">
-
-
                         <!-- display reddit posts here -->
 
                         <!-- post 1 -->
@@ -55,19 +57,20 @@
                                 </div>
                             </div>
                         </div>-->
-
-
-
-
-
-
-
                     </div>
 
-                    <div id="tab1" class="tab-pane fade">
+                    <!-- r/pics -->
+                    <div id="tab1" class="tab-pane fade"></div>
 
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
+                    <!-- r/programmerhumor -->
+                    <div id="tab2" class="tab-pane fade"></div>
+
+                    <!-- r/fitness -->
+                    <div id="tab3" class="tab-pane fade"></div>
+
+                    <!-- r/2007scape -->
+                    <div id="tab4" class="tab-pane fade"></div>
+
                 </div>
 
             </div>
