multiple fixed subreddits

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,19 +18,21 @@
         <div class="col-md-5 col-xs-5" id="left-column">
 
             <!-- tabs here -->
-            <ul class="nav nav-tabs border-right bold" id="nav">
-                <li class="active"><a data-toggle="tab" href="#tab0" id="r/all">r/all</a></li>
-                <li><a data-toggle="tab" href="#tab1" id="r/pics">r/pics</a></li>
-                <li><a data-toggle="tab" href="#tab2" id="r/programmerHumor">r/programmerHumor</a></li>
-                <li><a data-toggle="tab" href="#tab3" id="r/fitness">r/fitness</a></li>
-                <li><a data-toggle="tab" href="#tab4" id="r/2007scape">r/2007scape</a></li>
+            <ul class="nav nav-tabs bold" id="nav">
+
+                <!-- todo: horizontal scrolling upon overflow -->
+                <li class="active"><a data-toggle="tab" href="#all-body" id="r/all">r/all</a></li>
+                <li><a data-toggle="tab" href="#pics-body" id="r/pics">r/pics</a></li>
+                <li><a data-toggle="tab" href="#programmerHumor-body" id="r/programmerHumor">r/programmerHumor</a></li>
+                <li><a data-toggle="tab" href="#fitness-body" id="r/fitness">r/fitness</a></li>
+                <li><a data-toggle="tab" href="#2007scape-body" id="r/2007scape">r/2007scape</a></li>
 
             </ul>
 
-            <div class="well border-right left-well" id="left-column-0">
+            <div class="well left-well" id="left-column-0">
 
                 <div class="tab-content">
-                    <div id="tab0" class="tab-pane fade in active">
+                    <div id="all-body" class="tab-pane fade in active">
                         <!-- display reddit posts here -->
 
                         <!-- post 1 -->
@@ -60,16 +62,16 @@
                     </div>
 
                     <!-- r/pics -->
-                    <div id="tab1" class="tab-pane fade"></div>
+                    <div id="pics-body" class="tab-pane fade"></div>
 
                     <!-- r/programmerhumor -->
-                    <div id="tab2" class="tab-pane fade"></div>
+                    <div id="programmerHumor-body" class="tab-pane fade"></div>
 
                     <!-- r/fitness -->
-                    <div id="tab3" class="tab-pane fade"></div>
+                    <div id="fitness-body" class="tab-pane fade"></div>
 
                     <!-- r/2007scape -->
-                    <div id="tab4" class="tab-pane fade"></div>
+                    <div id="2007scape-body" class="tab-pane fade"></div>
 
                 </div>
 
