--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
         <div class="col-md-5 col-xs-5" id="left-column">
 
             <!-- tabs here -->
-            <ul class="nav nav-tabs bold" id="nav">
+            <ul class="nav nav-tabs bold orange-tint-gradient" id="nav">
 
                 <!-- todo: horizontal scrolling upon overflow -->
                 <li class="active"><a data-toggle="tab" href="#all-body" id="r/all">r/all</a></li>
@@ -29,7 +29,7 @@
 
             </ul>
 
-            <div class="well left-well" id="left-column-0">
+            <div class="well left-well dark-gradient" id="left-column-0">
 
                 <div class="tab-content">
                     <div id="all-body" class="tab-pane fade in active">
@@ -87,7 +87,7 @@
         <div class="col-md-7 col-xs-7" id="right-column">
 
 
-            <div class="well right-well" id="right-column-0">
+            <div class="well right-well peach-gradient" id="right-column-0">
                 <div id="display-comments">
 
 
