--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,8 @@
             <!-- tabs here -->
             <ul class="nav nav-tabs bold orange-tint-gradient" id="nav">
 
-                <!-- todo: horizontal scrolling upon overflow -->
+                <!-- todo: horizontal scrolling upon overflow
+                        hard to implement; ignore -->
                 <li class="active"><a data-toggle="tab" href="#all-body" id="r/all">r/all</a></li>
                 <li><a data-toggle="tab" href="#pics-body" id="r/pics">r/pics</a></li>
                 <li><a data-toggle="tab" href="#programmerHumor-body" id="r/programmerHumor">r/programmerHumor</a></li>
@@ -34,31 +35,6 @@
                 <div class="tab-content">
                     <div id="all-body" class="tab-pane fade in active">
                         <!-- display reddit posts here -->
-
-                        <!-- post 1 -->
-                        <!--<div class="row border-bottom" id="rAll-posts0">
-                            <div class="col-md-2 col-xs-2 center-upvotes upvote-styling">
-                                <p>upboats here</p>
-                            </div>
-
-                            <div class="col-md-10 col-xs-10">
-                                <p class="reddit-title">title ... skrrr skrrr</p>
-
-                                <div class="row extra-post-info">
-                                    <div class="col-md-3 col-xs-4">
-                                        <p>author / username</p>
-                                    </div>
-
-                                    <div class="col-md-3 col-xs-4">
-                                        <p>subreddit</p>
-                                    </div>
-
-                                    <div class="col-md-3 col-xs-4">
-                                        <p>###### comments</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>-->
                     </div>
 
                     <!-- r/pics -->
@@ -86,11 +62,25 @@
         <!-- right side -->
         <div class="col-md-7 col-xs-7" id="right-column">
 
+            <!-- tabs here -->
+            <ul class="nav nav-tabs bold orange-tint-gradient" id="comments-navbar">
+
+                <!--li class="active"><a data-toggle="tab" href="#all-body" id="r/all">r/all</a></li>
+                <li><a data-toggle="tab" href="#pics-body" id="r/pics">r/pics</a></li>
+                <li><a data-toggle="tab" href="#programmerHumor-body" id="r/programmerHumor">r/programmerHumor</a></li>
+                <li><a data-toggle="tab" href="#fitness-body" id="r/fitness">r/fitness</a></li>
+                <li><a data-toggle="tab" href="#2007scape-body" id="r/2007scape">r/2007scape</a></li-->
+
+            </ul>
+
 
             <div class="well right-well peach-gradient" id="right-column-0">
-                <div id="display-comments">
+                <div id="display-comments" class="tab-content">
 
+                    <!--div id="all-body" class="tab-pane fade in active">
+                    </div>
 
+                    <div id="pics-body" class="tab-pane fade"></div-->
 
 
                 </div>
