--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
         <div class="col-md-7 col-xs-7" id="right-column">
 
             <!-- tabs here -->
-            <ul class="nav nav-tabs bold orange-tint-gradient" id="comments-navbar">
+            <ul class="nav nav-tabs bold dark-blue-tint-gradient" id="comments-navbar">
 
                 <!--li class="active"><a data-toggle="tab" href="#all-body" id="r/all">r/all</a></li>
                 <li><a data-toggle="tab" href="#pics-body" id="r/pics">r/pics</a></li>
