adding front end dependencies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylesheets/grid.css">
     <link rel="stylesheet" href="stylesheets/myCustom.css">
     <link rel="stylesheet" href="stylesheets/jquery.mCustomScrollbar.css">
+
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body>
 
