added simple websockets to update post upvotes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -108,6 +108,8 @@
 <script src="javascripts/bootstrap.min.js"></script>
 <script src="javascripts/jquery.mCustomScrollbar.js"></script>
 
+<script src="javascripts/socket.io.js"></script>
+
 <script src="javascripts/customScrollbar.js"></script>
 <script src="javascripts/indexMain.js"></script>
 </body>
