--- a/public/stylesheets/myCustom.css
+++ b/public/stylesheets/myCustom.css
@@ -147,7 +147,7 @@ html, body {
 /* TABS */
 
 .nav {
-    font-size: 18px;
+    font-size: 16px;
     font-style: italic;
     padding-left: 0;
     padding-bottom: 8px;
@@ -262,14 +262,14 @@ p, a, h3, h4{
 
 /* POSTS STYLING */
 .upvote-styling p{
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 0;
     color: #bfbfbf;
 }
 
 .reddit-title{
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 0;
     margin-top: 5px;
     color: #cc782f;
@@ -277,7 +277,7 @@ p, a, h3, h4{
 }
 
 .extra-post-info{
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .extra-post-info p{
@@ -384,6 +384,7 @@ a p:hover{
 .upvote-icon{
     display: inline;
     margin-bottom: 3px;
+    position: relative;
 }
 
 .reverse-hue{
@@ -429,7 +430,7 @@ a p:hover{
 }
 
 .large-comment-font{
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .comment-headers div{
