--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
     <div class="row" id="main">
 
         <!-- left side -->
-        <div class="col-md-5 col-xs-5" id="left-column">
+        <div class="col-md-12 col-xs-12" id="left-column">
 
             <!-- tabs here -->
             <ul class="nav nav-tabs bold orange-tint-gradient" id="nav">
@@ -32,7 +32,7 @@
 
             </ul>
 
-            <div class="well left-well dark-gradient" id="left-column-0">
+            <div class="well left-well dark-gradient-mirror" id="left-column-0">
 
                 <div class="tab-content">
                     <div id="all-body" class="tab-pane fade in active">
@@ -62,7 +62,7 @@
 
 
         <!-- right side -->
-        <div class="col-md-7 col-xs-7" id="right-column">
+        <div class="col-md-0 col-xs-0" id="right-column">
 
             <!-- tabs here -->
             <ul class="nav nav-tabs bold dark-blue-tint-gradient" id="comments-navbar">
@@ -76,7 +76,7 @@
             </ul>
 
 
-            <div class="well right-well peach-gradient" id="right-column-0">
+            <div class="well right-well dark-gradient" id="right-column-0">
                 <div id="display-comments" class="tab-content">
 
                     <!--div id="all-body" class="tab-pane fade in active">
